Add help page for build/push scripting environment
Close #56

--- a/app/templates/help.twig
+++ b/app/templates/help.twig
@@ -10,6 +10,7 @@
         <li><a href="#bugs">Who should I contact regarding bugs or feature requests?</a></li>
         <li><a href="#add-application">I would like to deploy my application with HAL 9000. What do I need to do?</a></li>
         <li><a href="#training">Are there any training sessions available?</a></li>
+        <li><a href="#application-deployment">How do I use a script to build or push my application?</a></li>
     </ul>
 
     <a name="support"></a>
@@ -34,79 +35,68 @@
     <p>After making sure that your project meets the minimum requirements above, gather the information below.</p>
     <ol>
         <li>
-            Determine what group your application should exist in within HAL 9000. This is commonly a team or business
-            area name. You can see the ones that already exist by looking at the <a href="{{ urlFor('groups') }}">Groups Page</a>.
-            If you need to create a new group, you'll need the following information.
-            <ul>
-                <li>
-                    A short name with no spaces or special characters. Examples include 'venture', 'servicing', and
-                    'webcore'.
-                </li>
-                <li>
-                    A fill name that described your group. Examples include 'Team Venture', 'Servicing', and 'Web
-                    Core'.
-                </li>
-            </ul>
+            <strong>Determine what group your application should exist in within HAL 9000.</strong>
+            <p>
+                This is commonly a team or business area name. You can see the ones that already exist by looking
+                at the <a href="{{ urlFor('groups') }}">Groups Page</a>. If you need to create a new group, you'll
+                need the following information.
+
+                <ul>
+                    <li>
+                        A nickname with no spaces or special characters. Examples include 'venture', 'servicing', and
+                        'webcore'.
+                    </li>
+                    <li>
+                        The full name that describes your group. Examples include 'Team Venture', 'Servicing', and 'Web
+                        Core'.
+                    </li>
+                </ul>
+            </p>
         </li>
         <li>
-            Determine the name of your application. You will need both a short name (lowercase, no spaces) and full name.
+            <strong>Determine the name of your application.</strong>
+            <p>You will need both a short name (lowercase, no spaces) and full name.</p>
         </li>
         <li>
-            Determine where your application exists within Github. Please provide the Github username or group and the
-            repository name.
+            <strong>Determine where your application exists within Github.</strong>
+            <p>Please provide the Github username or organization and the repository name.</p>
         </li>
         <li>
-            Determine who should be able to build and push your application. By default, HAL 9000 will grant build
-            & push permissions for non-production environments to all users who are collaborators on the Github
-            repository. If additional people need to be able to build and push, you will need to request that
-            LDAP permissions be created.
+            <strong>Determine who should be able to build and push your application.</strong>
+            <p>
+                By default, HAL 9000 will grant build &amp; push permissions for non-production environments to all
+                users who are collaborators on the Github repository. If additional people need to be able to build and
+                push, you will need to request that LDAP permissions be created.
+            </p>
         </li>
         <li>
-            Determine what environments and servers your application will be deployed to. (Example: test1www1, test1beta1, etc)
+            <strong>Determine what environments and servers your application will be deployed to.</strong>
+            <p>Examples: test1www1, test1beta1, etc.</p>
         </li>
         <li>
-            Determine what directory on those servers your application will live in. (Example: /var/www/application)
+            <strong>Determine what directory on those servers your application will live in.</strong>
+            <p>Example: /var/www/application</p>
         </li>
         <li>
-            Determine what, if any, command should be used to build your application. This is commonly a shell script
-            that lives withing your repository and tells HAL 9000 what should be done prior to pushing your code. It
-            must return 0 to indicate success or 1 to indicate failure. When this script is run, it will have access
-            to the following environment variables.
-            <ul>
-                <li>
-                    <code>HAL_ENVIRONMENT</code>: The environment that your application is being build for, commonly
-                    test, beta, or prod.
-                </li>
-            </ul>
+            <strong>Determine what, if any, command should be used to build your application.</strong>
+            <p>
+                This is commonly a shell script that lives withing your repository and tells HAL 9000 what should
+                be done prior to pushing your code. Read more about the <a href="{{ urlFor('help.deployment') }}">build scripting environment</a>.
+            </p>
         </li>
         <li>
-            Determine what, if any, command should be run after deploying your application. This is called a post-push
-            command and is commonly used to restart services or finalize a deployment. It must return 0 to indicate
-            success and 1 to indicate failure. This command will have access to the following environment variables.
-            <ul>
-                <li>
-                    <code>HAL_HOSTNAME</code>: The hostname of the sever your application was pushed to.
-                </li>
-                <li>
-                    <code>HAL_ENVIRONMENT</code>: The environment that your application was built for, commonly test,
-                    beta, or prod.
-                </li>
-                <li>
-                    <code>HAL_PATH</code>: The path on the server where your application was pushed to.
-                </li>
-                <li>
-                    <code>HAL_COMMIT</code>: The Git commit hash that was built.
-                </li>
-                <li>
-                    <code>HAL_GITREF</code>: The Git branch, tag, or pull request name that was built.
-                </li>
-                <li>
-                    <code>HAL_BUILDID</code>: The unique build ID.
-                </li>
-            </ul>
-            Please note that, when this command is run, your code has already been pushed to the final server. For this
-            reason, returning an error state will not stop the push process. If an error occurs, you will need to start
-            a new push and overwrite the failed one.
+            <strong>Determine what, if any, command should be run before deploying your application.</strong>
+            <p>
+                This is called a pre-push command and is commonly used to stop services.
+                Read more about the <a href="{{ urlFor('help.deployment') }}">push scripting environment</a>.
+            </p>
+        </li>
+        <li>
+            <strong>Determine what, if any, command should be run after deploying your application.</strong>
+            <p>
+                This is called a post-push command and is commonly used to restart services or finalize a deployment.
+                Read more about the <a href="{{ urlFor('help.deployment') }}">push scripting environment</a>.
+            </p>
         </li>
     </ol>
     <p>
@@ -120,6 +110,13 @@
     <p>
         If you would like to train your team on how to use HAL 9000, then contact the <a href="mailto:WebCore@quickenloans.com">Web Core</a>
         team and we'll set up a time to show you how.
+    </p>
+
+    <a name="application-deployment"></a>
+    <h3>How do I use a script to build or push my application?</h3>
+    <p>
+        System commands can be used to customize the build and/or push process for an application. Read more about the
+        <a href="{{ urlFor('help.deployment') }}">build and push scripting environment</a>.
     </p>
 
 
