Fix pre-post command editing

--- a/app/templates/repository/admin.edit.twig
+++ b/app/templates/repository/admin.edit.twig
@@ -63,8 +63,8 @@
                     <input type="text" name="build_command" id="build_command" size="30" maxlength="128" value="{{ form.build_command }}" class="text-input">
                 </li>
                 <li>
-                    <label for="post_command">Pre Push Command <small class="additional">Will be run on remote server before code is pushed.</small></label>
-                    <input type="text" name="post_command" id="post_command" size="30" maxlength="128" value="{{ form.pre_command }}" class="text-input">
+                    <label for="pre_command">Pre Push Command <small class="additional">Will be run on remote server before code is pushed.</small></label>
+                    <input type="text" name="pre_command" id="pre_command" size="30" maxlength="128" value="{{ form.pre_command }}" class="text-input">
                 </li>
                 <li>
                     <label for="post_command">Post Push Command <small class="additional">Will be run on remote server after code is pushed.</small></label>
