Autofocus username on login form
Fix #94

--- a/app/templates/login.twig
+++ b/app/templates/login.twig
@@ -14,7 +14,7 @@
             <ul class="form-fields">
                 <li>
                     <label for="username">Username</label>
-                    <input class="text-input" type="text" id="username" name="username">
+                    <input class="text-input" type="text" id="username" name="username" autofocus>
                 </li>
                 <li>
                     <label for="password">Password</label>
