Breaking build permissions from push permissions. Any user associated with a repo can build, or admins.

--- a/app/templates/repository/status.twig
+++ b/app/templates/repository/status.twig
@@ -69,7 +69,9 @@
     <p>This table shows all recent available builds.</p>
     {% include 'partials/build-table.twig' with {'builds': builds} %}
     <p>
-        <a class="btn--small btn--toggles btn--action" href="{{ urlFor('build.start', {'id': repo.id}) }}">Start New Build</a>
+        {% if canUserBuild(currentUser, repo.key) %}
+            <a class="btn--small btn--toggles btn--action" href="{{ urlFor('build.start', {'id': repo.id}) }}">Start New Build</a>
+        {% endif %}
         <a class="btn--small btn--toggles" href="{{ urlFor('build.history', {'id': repo.id, 'page': 1}) }}">All Builds</a>
         <a class="btn--small btn--toggles" href="{{ urlFor('push.history', {'id': repo.id, 'page': 1}) }}">All Pushes</a>
     </p>
