--- a/app/templates/repository/status.twig
+++ b/app/templates/repository/status.twig
@@ -37,8 +37,20 @@
                             <td>None</td>
                         {% endif %}
                         {% if status.success %}
-                            <td><a href="{{ urlFor('build', {'repo': repo.id, 'build': status.success.build.id}) }}">{{ status.success.build.id[:10] }}</a></td>
-                            <td>{{ status.success.build.branch[:20] }}</td>
+                            <td>
+                                <a href="{{ urlFor('build', {'repo': repo.id, 'build': status.success.build.id}) }}">{{ status.success.build.id[:10] }}</a>
+                            </td>
+                            <td>
+                                {% if githubCommitIsCurrent(repo.githubUser, repo.githubRepo, status.success.build.branch, status.success.build.commit) %}
+                                    <span class="circle-green">
+                                        {{ status.success.build.branch[:20] }}
+                                    </span>
+                                {% else %}
+                                    <span class="circle-orange">
+                                        {{ status.success.build.branch[:20] }}
+                                    </span>
+                                {% endif %}
+                            </td>
                             <td>
                                 <a href="{{ githubCommit(repo.githubUser, repo.githubRepo, status.success.build.commit) }}">{{ status.success.build.commit[:7] }}</a>
                                 <span class="icon">
