Removing the leftover 'show all ...' buttons.

--- a/app/templates/environment/environment.twig
+++ b/app/templates/environment/environment.twig
@@ -19,12 +19,8 @@
     {% endif %}
 
     <div>
-        {# primary action #}
-        <a class="btn" href="{{ urlFor('environments') }}">View all environments</a>
-
         {% if isAdmin %}
-            {# secondary actions #}
-            <a class="btn--action secondary-action" href="{{ urlFor('environment.admin.edit', {id: env.id}) }}">Edit</a>
+            <a class="btn--action" href="{{ urlFor('environment.admin.edit', {id: env.id}) }}">Edit</a>
             {% if not servers  and canUserDelete(currentUser) %}
                 <form class="secondary-action" action="{{ urlFor('environment.admin.remove.handle', {id: env.id}) }}" method="post">
                     <input class="btn--destructive" type="submit" value="Remove">
