Adding build count to user page.

--- a/app/templates/user/user.twig
+++ b/app/templates/user/user.twig
@@ -24,6 +24,7 @@
 
     <h3>Stats</h3>
     <ul>
+        <li><b>Total Builds:</b> {{ builds }}</li>
         <li><b>Total Pushes:</b> {{ pushes }}</li>
         <li>
             <b>Github Page:</b> <a href="http://git/{{ profileUser.handle }}">http://git/{{ profileUser.handle }}</a>
