--- a/app/templates/partials/build-table.twig
+++ b/app/templates/partials/build-table.twig
@@ -42,7 +42,7 @@
                 <td>{{ build.end|date }}</td>
                 <td>
                     {% if build.status == 'Success' %}
-                        {% if canUserPush(user, repo.key, build.server.environment.key) %}
+                        {% if canUserPush(user, build.repository.key, build.server.environment.key) %}
                             <a href="{{ urlFor('push.start', {'repo': build.repository.key, 'build': build.id}) }}">Push</a>
                         {% endif %}
                     {% endif %}
