--- a/app/templates/build.push.twig
+++ b/app/templates/build.push.twig
@@ -14,14 +14,41 @@
             <thead>
             <tr>
                 <th>Server</th>
+                <th>Build</th>
+                <th>Branch</th>
+                <th>Commit</th>
+                <th>Pushed</th>
                 <th>Actions</th>
             </tr>
             </thead>
             <tbody>
             {% set allowSubmit = false %}
-            {% for deployment in deployments %}
+            {% for status in statuses %}
                 <tr>
-                    <td><a href="{{ urlFor('server', {'id': deployment.server.id}) }}">{{ deployment.server.name }} ({{ deployment.server.environment.key }})</a></td>
+                    <td><a href="{{ urlFor('server', {'id': status.deployment.server.id}) }}">{{ status.deployment.server.name }} ({{ status.deployment.server.environment.key }})</a></td>
+                    {% if status.success %}
+                        <td><a href="{{ urlFor('build', {'repo': status.deployment.repository.id, 'build': status.success.build.id}) }}">{{ status.success.build.id[:10] }}</a></td>
+                        <td>
+                            <span {% if githubCommitIsCurrent(build.repository.githubUser, build.repository.githubRepo, status.success.build.branch, status.success.build.commit) %}
+                                class="circle-green"
+                            {% else %}
+                                class="circle-orange"
+                            {% endif %}>
+                                {{ status.success.build.branch[:20] }}
+                            </span>
+                        </td>
+                        <td>
+                            <a href="{{ githubCommit(build.repository.githubUser, build.repository.githubRepo, status.success.build.commit) }}">{{ status.success.build.commit[:7] }}</a>
+                            <span class="icon">
+                                <svg viewBox="0 0 32 32">
+                                    <use xlink:href="#github"></use>
+                                </svg>
+                            </span>
+                        </td>
+                        <td>{{ status.success.end|date }}</td>
+                    {% else %}
+                        <td colspan="4">Unknown</td>
+                    {% endif %}
                     <td>
                         {% if canUserPush(user, deployment.repository.key, deployment.server.environment.key) %}
                             {% if deployment.id in selected %}
