--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+/* line 65, ../../../../../../Library/Ruby/Gems/2.0.0/gems/singularitygs-1.1.2/stylesheets/singularitygs/helpers/_clearfix.scss */
+[class*="nav"]:after, .media:after, [class*="island"]:after, [class*="islet"]:after, [class*="multi-list"]:after, [class*="split"]:after, .stat-group:after, [role="main"]:after, .cards:after, [class*="alert-bar"]:after { content: ""; display: table; clear: both; }
+
 /* line 61, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
 * html { font-size: 112.5%; }
 
@@ -573,9 +576,9 @@ label, .label { display: block; margin-bottom: 0; }
 .stat:first-of-type, .stat__value { margin-left: 0; }
 
 /* line 10, ../../sass/scales/utilities/_placeholders.scss */
-[class*="nav"]:before, .media:before, [class*="island"]:before, [class*="islet"]:before, [class*="multi-list"]:before, [class*="split"]:before, .stat-group:before, [role="main"]:before, [class*="alert-bar"]:before, [class*="nav"]:after, .media:after, [class*="island"]:after, [class*="islet"]:after, [class*="multi-list"]:after, [class*="split"]:after, .stat-group:after, [role="main"]:after, [class*="alert-bar"]:after { content: " "; display: table; }
+[class*="nav"]:before, .media:before, [class*="island"]:before, [class*="islet"]:before, [class*="multi-list"]:before, [class*="split"]:before, .stat-group:before, [role="main"]:before, .cards:before, [class*="alert-bar"]:before, [class*="nav"]:after, .media:after, [class*="island"]:after, [class*="islet"]:after, [class*="multi-list"]:after, [class*="split"]:after, .stat-group:after, [role="main"]:after, .cards:after, [class*="alert-bar"]:after { content: " "; display: table; }
 /* line 15, ../../sass/scales/utilities/_placeholders.scss */
-[class*="nav"]:after, .media:after, [class*="island"]:after, [class*="islet"]:after, [class*="multi-list"]:after, [class*="split"]:after, .stat-group:after, [role="main"]:after, [class*="alert-bar"]:after { clear: both; }
+[class*="nav"]:after, .media:after, [class*="island"]:after, [class*="islet"]:after, [class*="multi-list"]:after, [class*="split"]:after, .stat-group:after, [role="main"]:after, .cards:after, [class*="alert-bar"]:after { clear: both; }
 
 /* line 24, ../../sass/scales/utilities/_placeholders.scss */
 .nav--keywords > li, .nav--keywords > li > a, .nav--pagination > li, .nav--pagination > li > a, .nav--breadcrumb > li, .nav--breadcrumb > li > a, .nav--breadcrumb--path > li, .nav--breadcrumb--path > li > a { display: inline-block; }
@@ -634,10 +637,54 @@ main > p { max-width: 40em; }
 .circle-green::before { content: ''; background: green; }
 
 /* line 1, ../../sass/partials/_icons.scss */
-.icon { position: relative; width: 18px; height: 18px; fill: #070103; display: inline-block; }
+.icon { position: relative; width: 18px; height: 18px; display: inline-block; }
 
-/* line 9, ../../sass/partials/_icons.scss */
+/* line 8, ../../sass/partials/_icons.scss */
 .icon:after { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
+/* line 17, ../../sass/partials/_icons.scss */
+svg.icon { fill: currentColor; }
+
+@media (min-width: 40em) { /* line 6, ../../sass/partials/_cards.scss */
+  .cards > li:nth-child(odd) { width: 47.61905%; float: left; margin-right: -100%; margin-left: 0%; clear: none; clear: left; }
+  /* line 11, ../../sass/partials/_cards.scss */
+  .cards > li:nth-child(even) { width: 47.61905%; float: right; margin-left: 0; margin-right: 0; clear: none; clear: right; } }
+@media (min-width: 60em) { /* line 18, ../../sass/partials/_cards.scss */
+  .cards > li:nth-child(3n+1) { width: 31.25%; float: left; margin-right: -100%; margin-left: 0%; clear: none; clear: left; }
+  /* line 23, ../../sass/partials/_cards.scss */
+  .cards > li:nth-child(3n+2) { width: 31.25%; float: left; margin-right: -100%; margin-left: 34.375%; clear: none; }
+  /* line 27, ../../sass/partials/_cards.scss */
+  .cards > li:nth-child(3n+3) { width: 31.25%; float: right; margin-left: 0; margin-right: 0; clear: none; clear: right; } }
+
+/* line 33, ../../sass/partials/_cards.scss */
+.card { padding-left: 0.77778em; padding-right: 0.77778em; margin-top: 0em; padding-top: 0.375em; padding-bottom: 0.375em; margin-bottom: 1.5em; -webkit-box-shadow: 0 0 0 8px #e5e5e5; box-shadow: 0 0 0 8px #e5e5e5; position: relative; }
+
+/* line 40, ../../sass/partials/_cards.scss */
+.card__header { background-color: #e5e5e5; margin: -.375em -.77778em 0 -.77778em; padding-left: 0.77778em; padding-right: 0.77778em; padding-bottom: 0.61111em; }
+
+/* line 47, ../../sass/partials/_cards.scss */
+.card__details { background: white; margin-top: 0.75em; padding-top: 0em; padding-bottom: 0em; margin-bottom: 0em; }
+
+/* line 53, ../../sass/partials/_cards.scss */
+[class*="status--"]:after { content: ''; border-radius: 50%; position: absolute; right: .5em; top: .9em; width: 30px; height: 30px; display: block; }
+
+/* line 66, ../../sass/partials/_cards.scss */
+.status--success:after { background-color: #00c92c; }
+
+/* line 72, ../../sass/partials/_cards.scss */
+.status--error:after { background-color: #d63620; }
+
+/* line 78, ../../sass/partials/_cards.scss */
+.status--other:after { background-color: #ff7c00; }
+
+/* line 83, ../../sass/partials/_cards.scss */
+.expand { position: absolute !important; right: .5em; bottom: .5em; background: transparent; border: 0; fill: white; padding: 0; }
+
+/* line 93, ../../sass/partials/_cards.scss */
+.rollback .icon { -webkit-transition: all .9s ease; transition: all .9s ease; }
+
+/* line 97, ../../sass/partials/_cards.scss */
+.rollback:hover .icon { -webkit-transform: rotate(-360deg); -ms-transform: rotate(-360deg); transform: rotate(-360deg); }
 
 /* line 1, ../../sass/partials/_js.scss */
 .js-form-toggle { display: block; }
@@ -670,7 +717,7 @@ main > p { max-width: 40em; }
 #env-reorder tbody tr { cursor: move; }
 
 /* line 1, ../../sass/partials/base/_forms.scss */
-.text-input, textarea { width: 100%; font-size: 1.11111em; line-height: 1.35em; padding: 0.675em; background: #fff; -webkit-box-shadow: inset 0 2px 0 #5d4c5d, inset 2px 0px 0 #5d4c5d, inset -2px 0px 0 #5d4c5d, inset 0px -2px 0 #5d4c5d; box-shadow: inset 0 2px 0 #5d4c5d, inset 2px 0px 0 #5d4c5d, inset -2px 0px 0 #5d4c5d, inset 0px -2px 0 #5d4c5d; }
+.text-input, textarea { width: 100%; font-size: 1.11111em; line-height: 1.35em; padding: 0.675em; background: #fff; -webkit-box-shadow: inset 0 2px 0 #888888, inset 2px 0px 0 #888888, inset -2px 0px 0 #888888, inset 0px -2px 0 #888888; box-shadow: inset 0 2px 0 #888888, inset 2px 0px 0 #888888, inset -2px 0px 0 #888888, inset 0px -2px 0 #888888; }
 /* line 7, ../../sass/partials/base/_forms.scss */
 .text-input:focus, textarea:focus { -webkit-box-shadow: inset 0 2px 0 #236298, inset 2px 0px 0 #236298, inset -2px 0px 0 #236298, inset 0px -2px 0 #236298; box-shadow: inset 0 2px 0 #236298, inset 2px 0px 0 #236298, inset -2px 0px 0 #236298, inset 0px -2px 0 #236298; }
 
@@ -681,7 +728,7 @@ legend { font-size: 1.77778em; line-height: 1.26563em; }
 .error-list { border: 3px dashed #d63620; margin-left: 0; padding: 0 2.38889em; margin-top: 0em; padding-top: 1.5em; padding-bottom: 1.5em; margin-bottom: 1.5em; color: #d63620; }
 
 /* line 24, ../../sass/partials/base/_forms.scss */
-select { width: 100%; border: 1px solid #5d4c5d; }
+select { width: 100%; border: 1px solid #888888; }
 
 @media (min-width: 37.125em) { /* line 29, ../../sass/partials/base/_forms.scss */
   .form-wrapper { max-width: 28em; } }
@@ -696,7 +743,7 @@ table { min-width: 32em; }
 thead { border-bottom: 5px solid #01002b; }
 
 /* line 9, ../../sass/partials/base/_tables.scss */
-tbody tr { border-bottom: 1px dotted #d7cbd7; font-size: 0.77778em; line-height: 1.92857em; }
+tbody tr { border-bottom: 1px dotted #e5e5e5; font-size: 0.77778em; line-height: 1.92857em; }
 
 /* line 14, ../../sass/partials/base/_tables.scss */
 .overflow-container { overflow-y: scroll; }
@@ -733,7 +780,7 @@ tbody tr { border-bottom: 1px dotted #d7cbd7; font-size: 0.77778em; line-height:
 .nav--admin li a { background-color: #01002b; border-bottom: 1px solid #01002b; }
 
 /* line 68, ../../sass/partials/patterns/_nav.scss */
-.disabled { color: #d7cbd7; }
+.disabled { color: #e5e5e5; }
 
 /* line 72, ../../sass/partials/patterns/_nav.scss */
 .pages { padding-right: 0.77778em; padding-left: 0.77778em; }
@@ -765,6 +812,9 @@ tbody tr { border-bottom: 1px dotted #d7cbd7; font-size: 0.77778em; line-height:
 
 /* line 53, ../../sass/partials/patterns/_buttons.scss */
 .toggles { float: right; }
+
+/* line 1, ../../sass/partials/base/_lists.scss */
+.list--bare { margin: 0; padding: 0; list-style-type: none; }
 
 /* line 1, ../../sass/partials/patterns/_block-list.scss */
 .block-list--limit { max-width: 40em; }
@@ -804,7 +854,7 @@ tbody tr { border-bottom: 1px dotted #d7cbd7; font-size: 0.77778em; line-height:
 .choice-list__choice--first { float: left; }
 
 /* line 1, ../../sass/partials/patterns/_split.scss */
-.details-box { border: 8px solid #d7cbd7; padding: 1.11111em; margin-bottom: 1.5em; }
+.details-box { border: 8px solid #e5e5e5; padding: 1.11111em; margin-bottom: 1.5em; }
 /* line 6, ../../sass/partials/patterns/_split.scss */
 .details-box .split--left__title { font-weight: bold; width: 15em; font-size: 1.33333em; line-height: 1.6875em; }
 @media (min-width: 41.125em) { /* line 6, ../../sass/partials/patterns/_split.scss */
