--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -2,8 +2,8 @@
 // Color variables
 ///
 $text-color: #070103;
-$grey: #5d4c5d;
-$light-grey: #d7cbd7;
+$grey: #888;
+$light-grey: #e5e5e5;
 $white: #ffffff;
 $bright-blue: #4cb1dd;
 $blue: #236298;
