--- a/sass/partials/_icons.scss
+++ b/sass/partials/_icons.scss
@@ -2,7 +2,6 @@
     position: relative;
     width: 18px;
     height: 18px;
-    fill: $text-color;
     display: inline-block;
 }
 
@@ -13,4 +12,8 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+svg.icon {
+    fill: currentColor;
 }
