--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,148 +11,148 @@ html { font-size: 18px; line-height: 1.5em; }
 /*! normalize.css v2.0.1 | MIT License | git.io/normalize */
 /* ========================================================================== HTML5 display definitions ========================================================================== */
 /* Corrects `block` display not defined in IE 8/9. */
-/* line 21, ../../sass/scales/utilities/_normalize.scss */
-article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary { display: block; }
+/* line 22, ../../sass/scales/utilities/_normalize.scss */
+article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary, main { display: block; }
 
 /* Corrects `inline-block` display not defined in IE 8/9. */
-/* line 31, ../../sass/scales/utilities/_normalize.scss */
+/* line 32, ../../sass/scales/utilities/_normalize.scss */
 audio, canvas, video { display: inline-block; }
 
 /* Prevents modern browsers from displaying `audio` without controls. Remove excess height in iOS 5 devices. */
-/* line 40, ../../sass/scales/utilities/_normalize.scss */
+/* line 41, ../../sass/scales/utilities/_normalize.scss */
 audio:not([controls]) { display: none; height: 0; }
 
 /* Addresses styling for `hidden` attribute not present in IE 8/9. */
-/* line 49, ../../sass/scales/utilities/_normalize.scss */
+/* line 50, ../../sass/scales/utilities/_normalize.scss */
 [hidden] { display: none; }
 
 /* ========================================================================== Base ========================================================================== */
 /* 1. Sets default font family to sans-serif. 2. Prevents iOS text size adjust after orientation change, without disabling user zoom. */
-/* line 63, ../../sass/scales/utilities/_normalize.scss */
+/* line 64, ../../sass/scales/utilities/_normalize.scss */
 html { font-family: sans-serif; /* 1 */ -webkit-text-size-adjust: 100%; /* 2 */ -ms-text-size-adjust: 100%; /* 2 */ }
 
 /* Removes default margin. */
-/* line 73, ../../sass/scales/utilities/_normalize.scss */
+/* line 74, ../../sass/scales/utilities/_normalize.scss */
 body { margin: 0; }
 
 /* ========================================================================== Links ========================================================================== */
 /* Addresses `outline` inconsistency between Chrome and other browsers. */
-/* line 85, ../../sass/scales/utilities/_normalize.scss */
+/* line 86, ../../sass/scales/utilities/_normalize.scss */
 a:focus { outline: thin dotted; }
 
 /* Improves readability when focused and also mouse hovered in all browsers. */
-/* line 94, ../../sass/scales/utilities/_normalize.scss */
+/* line 95, ../../sass/scales/utilities/_normalize.scss */
 a:active, a:hover { outline: 0; }
 
 /* ========================================================================== Typography ========================================================================== */
 /* Addresses `h1` font sizes within `section` and `article` in Firefox 4+, Safari 5, and Chrome. */
-/* line 107, ../../sass/scales/utilities/_normalize.scss */
+/* line 108, ../../sass/scales/utilities/_normalize.scss */
 h1 { font-size: 2em; }
 
 /* Addresses styling not present in IE 8/9, Safari 5, and Chrome. */
-/* line 115, ../../sass/scales/utilities/_normalize.scss */
+/* line 116, ../../sass/scales/utilities/_normalize.scss */
 abbr[title] { border-bottom: 1px dotted; }
 
 /* Addresses style set to `bolder` in Firefox 4+, Safari 5, and Chrome. */
-/* line 124, ../../sass/scales/utilities/_normalize.scss */
+/* line 125, ../../sass/scales/utilities/_normalize.scss */
 b, strong { font-weight: bold; }
 
 /* Addresses styling not present in Safari 5 and Chrome. */
-/* line 132, ../../sass/scales/utilities/_normalize.scss */
+/* line 133, ../../sass/scales/utilities/_normalize.scss */
 dfn { font-style: italic; }
 
 /* Addresses styling not present in IE 8/9. */
-/* line 140, ../../sass/scales/utilities/_normalize.scss */
+/* line 141, ../../sass/scales/utilities/_normalize.scss */
 mark { background: #ff0; color: #000; }
 
 /* Corrects font family set oddly in Safari 5 and Chrome. */
-/* line 153, ../../sass/scales/utilities/_normalize.scss */
+/* line 154, ../../sass/scales/utilities/_normalize.scss */
 code, kbd, pre, samp { font-family: monospace, serif; font-size: 1em; }
 
 /* Improves readability of pre-formatted text in all browsers. */
-/* line 162, ../../sass/scales/utilities/_normalize.scss */
+/* line 163, ../../sass/scales/utilities/_normalize.scss */
 pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
 
 /* Sets consistent quote types. */
-/* line 172, ../../sass/scales/utilities/_normalize.scss */
+/* line 173, ../../sass/scales/utilities/_normalize.scss */
 q { quotes: "\201C" "\201D" "\2018" "\2019"; }
 
 /* Addresses inconsistent and variable font size in all browsers. */
-/* line 180, ../../sass/scales/utilities/_normalize.scss */
+/* line 181, ../../sass/scales/utilities/_normalize.scss */
 small { font-size: 80%; }
 
 /* Prevents `sub` and `sup` affecting `line-height` in all browsers. */
-/* line 189, ../../sass/scales/utilities/_normalize.scss */
+/* line 190, ../../sass/scales/utilities/_normalize.scss */
 sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
 
-/* line 196, ../../sass/scales/utilities/_normalize.scss */
+/* line 197, ../../sass/scales/utilities/_normalize.scss */
 sup { top: -0.5em; }
 
-/* line 200, ../../sass/scales/utilities/_normalize.scss */
+/* line 201, ../../sass/scales/utilities/_normalize.scss */
 sub { bottom: -0.25em; }
 
 /* ========================================================================== Embedded content ========================================================================== */
 /* Removes border when inside `a` element in IE 8/9. */
-/* line 212, ../../sass/scales/utilities/_normalize.scss */
+/* line 213, ../../sass/scales/utilities/_normalize.scss */
 img { border: 0; }
 
 /* Corrects overflow displayed oddly in IE 9. */
-/* line 220, ../../sass/scales/utilities/_normalize.scss */
+/* line 221, ../../sass/scales/utilities/_normalize.scss */
 svg:not(:root) { overflow: hidden; }
 
 /* ========================================================================== Figures ========================================================================== */
 /* Addresses margin not present in IE 8/9 and Safari 5. */
-/* line 232, ../../sass/scales/utilities/_normalize.scss */
+/* line 233, ../../sass/scales/utilities/_normalize.scss */
 figure { margin: 0; }
 
 /* ========================================================================== Forms ========================================================================== */
 /* Define consistent border, margin, and padding. */
-/* line 244, ../../sass/scales/utilities/_normalize.scss */
+/* line 245, ../../sass/scales/utilities/_normalize.scss */
 fieldset { border: 1px solid #c0c0c0; margin: 0 2px; padding: 0.35em 0.625em 0.75em; }
 
 /* 1. Corrects color not being inherited in IE 8/9. 2. Remove padding so people aren't caught out if they zero out fieldsets. */
-/* line 255, ../../sass/scales/utilities/_normalize.scss */
+/* line 256, ../../sass/scales/utilities/_normalize.scss */
 legend { border: 0; /* 1 */ padding: 0; /* 2 */ }
 
 /* 1. Corrects font family not being inherited in all browsers. 2. Corrects font size not being inherited in all browsers. 3. Addresses margins set differently in Firefox 4+, Safari 5, and Chrome */
-/* line 269, ../../sass/scales/utilities/_normalize.scss */
+/* line 270, ../../sass/scales/utilities/_normalize.scss */
 button, input, select, textarea { font-family: inherit; /* 1 */ font-size: 100%; /* 2 */ margin: 0; /* 3 */ }
 
 /* Addresses Firefox 4+ setting `line-height` on `input` using `!important` in the UA stylesheet. */
-/* line 281, ../../sass/scales/utilities/_normalize.scss */
+/* line 282, ../../sass/scales/utilities/_normalize.scss */
 button, input { line-height: normal; }
 
 /* 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio` and `video` controls. 2. Corrects inability to style clickable `input` types in iOS. 3. Improves usability and consistency of cursor style between image-type `input` and others. */
-/* line 296, ../../sass/scales/utilities/_normalize.scss */
+/* line 297, ../../sass/scales/utilities/_normalize.scss */
 button, html input[type="button"], input[type="reset"], input[type="submit"] { -webkit-appearance: button; /* 2 */ cursor: pointer; /* 3 */ }
 
 /* Re-set default cursor for disabled elements. */
-/* line 306, ../../sass/scales/utilities/_normalize.scss */
+/* line 307, ../../sass/scales/utilities/_normalize.scss */
 button[disabled], input[disabled] { cursor: default; }
 
 /* 1. Addresses box sizing set to `content-box` in IE 8/9. 2. Removes excess padding in IE 8/9. */
-/* line 316, ../../sass/scales/utilities/_normalize.scss */
+/* line 317, ../../sass/scales/utilities/_normalize.scss */
 input[type="checkbox"], input[type="radio"] { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; /* 1 */ padding: 0; /* 2 */ }
 
 /* 1. Addresses `appearance` set to `searchfield` in Safari 5 and Chrome. 2. Addresses `box-sizing` set to `border-box` in Safari 5 and Chrome (include `-moz` to future-proof). */
-/* line 327, ../../sass/scales/utilities/_normalize.scss */
+/* line 328, ../../sass/scales/utilities/_normalize.scss */
 input[type="search"] { -webkit-appearance: textfield; /* 1 */ -moz-box-sizing: content-box; -webkit-box-sizing: content-box; /* 2 */ box-sizing: content-box; }
 
 /* Removes inner padding and search cancel button in Safari 5 and Chrome on OS X. */
-/* line 340, ../../sass/scales/utilities/_normalize.scss */
+/* line 341, ../../sass/scales/utilities/_normalize.scss */
 input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration { -webkit-appearance: none; }
 
 /* Removes inner padding and border in Firefox 4+. */
-/* line 349, ../../sass/scales/utilities/_normalize.scss */
+/* line 350, ../../sass/scales/utilities/_normalize.scss */
 button::-moz-focus-inner, input::-moz-focus-inner { border: 0; padding: 0; }
 
 /* 1. Removes default vertical scrollbar in IE 8/9. 2. Improves readability and alignment in all browsers. */
-/* line 359, ../../sass/scales/utilities/_normalize.scss */
+/* line 360, ../../sass/scales/utilities/_normalize.scss */
 textarea { overflow: auto; /* 1 */ vertical-align: top; /* 2 */ }
 
 /* ========================================================================== Tables ========================================================================== */
 /* Remove most spacing between table cells. */
-/* line 372, ../../sass/scales/utilities/_normalize.scss */
+/* line 373, ../../sass/scales/utilities/_normalize.scss */
 table { border-collapse: collapse; border-spacing: 0; }
 
 /* line 15, ../../sass/scales/utilities/_reset.scss */
@@ -624,18 +624,6 @@ main > p { max-width: 40em; }
 /* line 88, ../../sass/partials/_global.scss */
 .mbn { margin-bottom: 0 !important; }
 
-/* line 92, ../../sass/partials/_global.scss */
-.circle-red::before, .circle-orange::before, .circle-green::before { display: inline-block; width: 1em; height: 1em; margin-right: 0.3em; border-radius: 50%; }
-
-/* line 100, ../../sass/partials/_global.scss */
-.circle-red::before { content: ''; background: red; }
-
-/* line 106, ../../sass/partials/_global.scss */
-.circle-orange::before { content: ''; background: orange; }
-
-/* line 112, ../../sass/partials/_global.scss */
-.circle-green::before { content: ''; background: green; }
-
 /* line 1, ../../sass/partials/_icons.scss */
 .icon { position: relative; width: 18px; height: 18px; display: inline-block; }
 
@@ -644,6 +632,27 @@ main > p { max-width: 40em; }
 
 /* line 17, ../../sass/partials/_icons.scss */
 svg.icon { fill: currentColor; }
+
+/* line 31, ../../sass/partials/_icons.scss */
+[class*="status-before--"]:before { content: ''; display: inline-block; width: 1em; height: 1em; border-radius: 50%; margin-right: .25em; }
+
+/* line 37, ../../sass/partials/_icons.scss */
+[class*="status-after--"]:after { content: ''; display: inline-block; width: 1em; height: 1em; border-radius: 50%; margin-right: .25em; }
+
+/* line 43, ../../sass/partials/_icons.scss */
+.status-before--success:before, .status-after--success:before { background-color: #00c92c; }
+/* line 46, ../../sass/partials/_icons.scss */
+.status-before--success:after, .status-after--success:after { background-color: #00c92c; }
+
+/* line 52, ../../sass/partials/_icons.scss */
+.status-before--error:before, .status-after--error:before { background-color: #d63620; }
+/* line 55, ../../sass/partials/_icons.scss */
+.status-before--error:after, .status-after--error:after { background-color: #d63620; }
+
+/* line 61, ../../sass/partials/_icons.scss */
+.status-before--warning:before, .status-after--warning:before, .status-before--other:before, .status-after--other:before { background-color: #ff7c00; }
+/* line 64, ../../sass/partials/_icons.scss */
+.status-before--warning:after, .status-after--warning:after, .status-before--other:after, .status-after--other:after { background-color: #ff7c00; }
 
 @media (min-width: 40em) { /* line 6, ../../sass/partials/_cards.scss */
   .cards > li:nth-child(odd) { width: 47.61905%; float: left; margin-right: -100%; margin-left: 0%; clear: none; clear: left; }
@@ -665,25 +674,10 @@ svg.icon { fill: currentColor; }
 /* line 47, ../../sass/partials/_cards.scss */
 .card__details { background: white; margin-top: 0.75em; padding-top: 0em; padding-bottom: 0em; margin-bottom: 0em; }
 
-/* line 53, ../../sass/partials/_cards.scss */
-[class*="status--"]:after { content: ''; border-radius: 50%; position: absolute; right: .5em; top: .9em; width: 30px; height: 30px; display: block; }
-
-/* line 66, ../../sass/partials/_cards.scss */
-.status--success:after { background-color: #00c92c; }
-
-/* line 72, ../../sass/partials/_cards.scss */
-.status--error:after { background-color: #d63620; }
-
-/* line 78, ../../sass/partials/_cards.scss */
-.status--other:after { background-color: #ff7c00; }
-
-/* line 83, ../../sass/partials/_cards.scss */
-.expand { position: absolute !important; right: .5em; bottom: .5em; background: transparent; border: 0; fill: white; padding: 0; }
-
-/* line 93, ../../sass/partials/_cards.scss */
+/* line 52, ../../sass/partials/_cards.scss */
 .rollback .icon { -webkit-transition: all .9s ease; transition: all .9s ease; }
 
-/* line 97, ../../sass/partials/_cards.scss */
+/* line 56, ../../sass/partials/_cards.scss */
 .rollback:hover .icon { -webkit-transform: rotate(-360deg); -ms-transform: rotate(-360deg); transform: rotate(-360deg); }
 
 /* line 1, ../../sass/partials/_js.scss */
