--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -56,6 +56,7 @@
                             <li><a href="{{ urlFor('repositories') }}" title="repositories">Repositories</a></li>
                             <li><a href="{{ urlFor('environments') }}" title="environments">Environments</a></li>
                             <li><a href="{{ urlFor('users') }}" title="users">Users</a></li>
+                            <li><a href="{{ urlFor('logs', {'page': '1'}) }}">Logs</a></li>
                             {# Hiding because not needed for now. <li><a href="{{ urlFor('admin.dashboard') }}" title="admin dashboard">Admin</a></li> #}
                         {% endif %}
                         <li><a href="{{ urlFor('user.current') }}" title="profile">Profile</a></li>
